--- a/head.html
+++ b/head.html
@@ -3,7 +3,7 @@
 <title> Heading </title>
 </head>
 <body bgcolor="lightyellow">
-<left><a href="head.html"><img src="n.png" align="left" width=185 hieght=100></img></a></left>
+<left><a href="home.html"><img src="n.png" align="left" width=185 hieght=100></img></a></left>
 <center><font size="2">The National Education Society of Karnataka (Regd), Bangalore 560004</font></center>
 <b><center><font size="5">THE NATIONAL COLLEGE</font></b></center>
 <center><font size="2">AUTONOMUS</font></center>
